Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69735

QTextEdit don't move cursor to start in selection mode when there isn't any prev. line

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 5.13.0
    • 5.6.3, 5.9.6, 5.11.1
    • GUI: Text handling
    • None
    • Windows

    Description

      I have QTextEdit with text like this:

      012

      345

      678

       

      When I move cursor between 4 and 5 and when I do Shift + Up there is selection of text from 2 to 4

      Then when I press Shift + Up there should be selection 0-4 but it isn't.

      All is working fine when I do same but in opposite direction Shift + Down

       

      I attached patch that fix that behaviour and I don't. 

      there is piece of code for SelectionNextLine so I don't understand why we are missing code for SelectPreviousLine

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            miskol MICHAL LAZO
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes