Move cursor selection to start when there isn't any previous line in selection mode

Adding standard behavior for text selection, when user want to select text
and there isn't any previous line then selection will end on start

[ChangeLog][QtWidgets][QWidgetTextControlPrivate] Move cursor selection to start

Task-number: QTBUG-69735
Change-Id: If222d37747772f60774f671ffdd273d63cdaf571
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>